<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#2F2935"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_10"
        android:paddingTop="@dimen/margin_10" >

        <TextView
            android:id="@+id/textView_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/back"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textView_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/player"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView_video_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_header"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/margin_10"
        android:paddingTop="@dimen/margin_10"
        android:text="@string/videos"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" >
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView_video_title"
        android:layout_margin="@dimen/list_row_margin" >

        <VideoView
            android:id="@+id/videoview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true" >
        </VideoView>

        <ImageView
            android:id="@+id/imageview_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_media_play"
            android:visibility="gone" >
        </ImageView>
    </RelativeLayout>
<!-- <SurfaceView -->
<!--         android:id="@+id/surfView" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="fill_parent" /> -->
 
</RelativeLayout>