<?xml version="1.0" encoding="utf-8"?>  
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_second_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#241E2B"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2F2935"
            android:paddingBottom="@dimen/margin_10"
            android:paddingTop="@dimen/margin_10" >

            <LinearLayout
                android:id="@+id/layout_setting_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/image_setting_back"
                    android:layout_width="@dimen/margin_25"
                    android:layout_height="@dimen/margin_25"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/left" />

                <TextView
                    android:id="@+id/textView_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/action_settings"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/setting_dwn_file"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:paddingLeft="@dimen/margin_20"
            android:text="@string/download"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#211A26"
            android:paddingLeft="@dimen/margin_20" 
            android:paddingRight="@dimen/margin_20"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10">

            <TextView
                android:id="@+id/textView_3d_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/threeD_download"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

            <ToggleButton
                android:id="@+id/toggleButton_3d"
                android:layout_width="@dimen/togglebutton_width"
                android:layout_height="@dimen/togglebutton_height"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/toggle_background_selector"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:background="#211A26"
            android:paddingLeft="@dimen/margin_20" 
            android:paddingRight="@dimen/margin_20"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10">

            <TextView
                android:id="@+id/textView_clean_dwnl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/clear_download_finish"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

            <ToggleButton
                android:id="@+id/toggleButton_clean_dwnl"
                android:layout_width="@dimen/togglebutton_width"
                android:layout_height="@dimen/togglebutton_height"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/toggle_background_selector"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_50"
             android:background="#211A26"
            android:paddingLeft="@dimen/margin_20" 
            android:paddingRight="@dimen/margin_20"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10">

            <TextView
                android:id="@+id/textView_sim_dwnl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sim_download"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

            <Spinner
            android:id="@+id/sim_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/image_sim_dwnl"
            android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/image_sim_dwnl"
                android:layout_width="@dimen/icon_ht_wt"
                android:layout_height="@dimen/icon_ht_wt"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/right_arrow" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_25"
            android:paddingLeft="@dimen/margin_20"
            android:text="@string/files"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:background="#211A26"
            android:paddingLeft="@dimen/margin_20" 
            android:paddingRight="@dimen/margin_20"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10">

            <TextView
                android:id="@+id/textView_thumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/thumb"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

            <ToggleButton
                android:id="@+id/toggleButton_thumb"
                android:layout_width="@dimen/togglebutton_width"
                android:layout_height="@dimen/togglebutton_height"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/toggle_background_selector"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:background="#211A26"
            android:paddingLeft="@dimen/margin_20" 
            android:paddingRight="@dimen/margin_20"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10" >

            <TextView
                android:id="@+id/textView_capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/capital"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

            <ToggleButton
                android:id="@+id/toggleButton_capital"
                android:layout_width="@dimen/togglebutton_width"
                android:layout_height="@dimen/togglebutton_height"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/toggle_background_selector"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>
    </LinearLayout>
